<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_registration"
        tools:context=".ui.RegistrationActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/dimen_40"
                   android:scaleType="centerInside"
                   android:src="@drawable/logo"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/dimen_20"
                  android:layout_marginRight="@dimen/dimen_20"
                  android:textColor="@color/black"
                  android:gravity="center_horizontal"
                  android:text="@string/regis_dis"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:textSize="@dimen/sp_size_12"/>

        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/name"
                  android:id="@+id/name_text"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="text"
        />
        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/email"
                  android:id="@+id/email_text"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="textEmailAddress"
        />
        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/mob_no"
                  android:id="@+id/molile_text"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="phone"
        />
        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/restaurant_name"
                  android:id="@+id/restaurant_name_text"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="textEmailAddress"
        />
        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/restaurant_zip_code"
                  android:id="@+id/restaurant_zip_text"
                  android:maxLength="6"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="numberDecimal"
        />
        <EditText style="@style/common_edit"
                  android:layout_marginLeft="@dimen/dimen_50"
                  android:layout_marginRight="@dimen/dimen_50"
                  android:hint="@string/restaurant_role"
                  android:focusable="false"
                 android:onClick="openRoleDialog"
                  android:id="@+id/restaurant_role_text"
                  android:layout_marginTop="@dimen/dimen_20"
                  android:inputType="numberDecimal"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/submit_button_bg"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginRight="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_20"
                android:onClick="submitRegister"
        />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>