<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_size_12"
            android:textColor="@color/dark_gray"
            android:text="@string/grabull_demand"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_size_16"
                android:textStyle="bold"
                android:onClick="selfDelivery"
                android:textColor="@color/black"
                android:text="@string/self_delivery"/>

        <Switch android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchMinWidth="80dp"
                android:id="@+id/gb_switch"
                android:thumbTint="@color/blue_color"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_size_16"
                android:textStyle="bold"
                android:onClick="gbDelivery"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textColor="@color/black"
                android:text="@string/gb_delivery"/>


    </LinearLayout>

    <TextView android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_size_14"
            android:onClick="openTermDialog"
            android:textColor="@color/dark_gray"
            android:text="@string/view_terms"/>


</LinearLayout>