<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/dimen_50"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_10"
            android:textSize="@dimen/sp_size_14"
            android:textColor="@color/white"
            android:text="@string/marketing_coupon_lower"
            android:background="@color/button_color"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:textSize="@dimen/sp_size_14"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/design_your_discount_coupons"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_10"
            android:textSize="@dimen/sp_size_12"
            android:textStyle="normal"
            android:textColor="@color/dark_gray"
            android:text="@string/marketing_description"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/promotion_bg"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dimen_30"
                android:paddingBottom="@dimen/dimen_30"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/sp_size_14"
                    android:textColor="@color/black"
                    android:text="@string/user_attracted"/>
            <TextView android:id="@+id/month_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/black"
                    android:text="JUNE"/>
            <TextView android:id="@+id/user_size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:textSize="@dimen/sp_size_18"
                    android:textColor="@color/blue_color"
                    android:text="28"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_30"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="@dimen/dimen_30"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/sp_size_14"
                    android:textColor="@color/black"
                    android:text="@string/upto_four_promotions"/>
        </LinearLayout>
    </LinearLayout>
   <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/offer_recyclerview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_offer_text"
            android:text="@string/oops_no_offer_added"
            android:textStyle="bold"
            android:textSize="@dimen/sp_size_14"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    <Button style="@style/color_primary_round_button"
            android:textAllCaps="false"
            android:id="@+id/create_offer_button"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/dimen_40"
            android:text="@string/create_offer_lower"/>
</LinearLayout>
</androidx.core.widget.NestedScrollView>
